--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -246,9 +246,19 @@
                                             </div>
                                             <img src="images/Crowd-minders-Pictures/Fifa/Balopen.jpg" class="img-responsive" alt="">
                                         </a>
-                                        <div class="portfolio-caption"> 
+                                        <!-- <div class="portfolio-caption"> 
                                             <h4>BAL Basketball Championship</h4>
                                             <p class="text-muted">Basketball Africa League (BAL)</p>
+                                        </div> -->
+                                        <div class="portfolio-caption">
+                                          <h4>
+                                            <img src="icon/Pined.png" alt="Pin" style="width: 20px; vertical-align: middle; margin-right: 8px;">
+                                            BAL Basketball Championship
+                                          </h4>
+                                          <p class="text-muted">
+                                            <img src="icon/Pined.png" alt="Pin" style="width: 16px; vertical-align: middle; margin-right: 8px;">
+                                            Basketball Africa League (BAL)
+                                          </p>
                                         </div>
                                     </div>
                     
