--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -2236,7 +2236,9 @@
                                     </section>
                                     
                                    <b>Contact Section</b></br>
-                                   <b>From international concerts to local festivals, our expertise ensures a secure and seamless experience. Contact us today to make your next event exceptional! <a href="https://api.whatsapp.com/send/?phone=250737481512&text=Hello+,can+we+know+more+about+you?&type=phone_number&app_absent=0">WhatsApp</a> or <a href="tel:+250780854895">schedule a call</a> </p>
+                                   <b>Honor Legacies with Crowd Minders!</b><br> 
+                                   
+                                   <p>From tribute concerts to awareness campaigns, our expertise ensures a respectful and impactful event. Contact us today to make your next event memorable! <a href="https://api.whatsapp.com/send/?phone=250737481512&text=Hello+,can+we+know+more+about+you?&type=phone_number&app_absent=0">WhatsApp</a> or <a href="tel:+250780854895">schedule a call</a> </p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
