--- a/service.html
+++ b/service.html
@@ -578,14 +578,14 @@
                     </div>
                     <div class="thumbnail">
                         <div class="larg-thumb" data-sal="zoom-in" data-sal-duration="600" data-sal-delay="100">
-                            <img class="paralax-image" src="others/chat-group.png" alt="Chat">
+                            <!-- <img class="paralax-image" src="others/chat-group.png" alt="Chat"> -->
                         </div>
                         <ul class="list-unstyled small-thumb">
                             <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="400">
-                                <img class="paralax-image" src="others/laptop-poses.png" alt="Laptop">
+                                <!-- <img class="paralax-image" src="others/laptop-poses.png" alt="Laptop"> -->
                             </li>
                             <li class="shape shape-2" data-sal="slide-left" data-sal-duration="800" data-sal-delay="300">
-                                <img class="paralax-image" src="others/bill-pay.png" alt="Bill">
+                                <!-- <img class="paralax-image" src="others/bill-pay.png" alt="Bill"> -->
                             </li>
                         </ul>
                     </div>
