--- a/contact.html
+++ b/contact.html
@@ -255,6 +255,12 @@
         <!--=       Location  Area Start        =-->
         <!--=====================================-->
         
+        <!-- Map section -->
+        <div class="map">
+            <!-- Google Map iframe -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63799.52563886974!2d30.040462319531205!3d-1.9657507475153153!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca7a1ccdef87b%3A0x4452855a46876a65!2sBK%20Arena!5e0!3m2!1sen!2srw!4v1736843019240!5m2!1sen!2srw" width="800" height="275" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
         <!--=====================================-->
         <!--=        Footer Area Start       	=-->
         <!--=====================================-->
@@ -332,6 +338,8 @@
                         </div>
                     </div>
                 </div>
+
+
                 <div class="footer-bottom" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100">
                     <div class="row align-items-center">
                         <div class="col-md-6">
