--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -199,7 +199,7 @@
                     <p>Explore a showcase of remarkable events where precision, safety, and professionalism come alive. Let Crowd Minders secure your next success—get in touch today!</p>
                 </div>
                 <div class="banner-thumbnail" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
-                    <img class="paralax-image" src="banner/banner-thumb-1.png" alt="Illustration">
+                    <img class="paralax-image" src="banner/crowdM.png" alt="Illustration">
                 </div>
             </div>
             <ul class="shape-group-8 list-unstyled">
