--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <title>Crowd Minders | Security and Protocole in Rwanda</title>
 <meta name="description" content="Crowd Minders is a Leading Digital Agency in Rwanda, with a 
-focus on Web Development, Logo and Branding, Design, 3d Animation, SEO and Digital Marketing.">
+focus on Security, Guiding and Protocal.">
 <meta name="viewport" content="width=device-width,initial-scale=1.0 , shrink-to-fit=no">
 <meta name="robots" content="index,follow">
 
@@ -377,7 +377,7 @@ and Social Media services in Kigali, Rwanda. ">
                     <div class="col-xl-5 col-lg-6 offset-xl-1" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
                         <div class="contact-form-box">
                             <h3 class="title">Get a free Crowd Minders's Quote Now</h3>
-                            <form method="POST" action="https://formspree.io/f/myzgzepo" class="axil-contact-form" id="my-form">
+                            <form method="POST" action="https://formbold.com/s/3jvPV" class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <label>Name</label>
                                     <input type="text" class="form-control" name="contact-name" placeholder="David Adam" required="">
@@ -880,6 +880,16 @@ and Social Media services in Kigali, Rwanda. ">
                     </div>
                     <div class="col-lg-3 col-6" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100">
                         <div class="brand-grid">
+                            <img src="brand/fia.png" alt="Brand">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100">
+                        <div class="brand-grid">
+                            <img src="brand/GraceRoom-logo.png" alt="Brand">
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-6" data-sal="slide-up" data-sal-duration="500" data-sal-delay="100">
+                        <div class="brand-grid">
                             <img src="brand/Woman_D.png" alt="Brand">
                         </div>
                     </div>
@@ -915,7 +925,7 @@ and Social Media services in Kigali, Rwanda. ">
                     </div>
                     <div class="col-lg-3 col-6" data-sal="slide-up" data-sal-duration="500" data-sal-delay="700">
                         <div class="brand-grid">
-                            <img src="brand/calan.png" alt="Brand">
+                            <img src="brand/canalolympia.png" alt="Brand">
                         </div>
                     </div>
                 </div>
