--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="icons.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons.png">
 <link rel="manifest" href="site.webmanifest">
 
     <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
@@ -114,7 +114,7 @@
                                         <ul class="axil-submenu">
                                             <li><a href='javascript:void(0)'>About Us</a></li>
                                             
-                                            <li><a href='javascript:void(0)'>Pricing Table</a></li>
+                                            <li><a href='javascript:void(0)'>Work_Table</a></li>
 
                                         </ul>
                                     </li>
@@ -194,7 +194,7 @@
                     <div class="col-xl-5 col-lg-6">
                         <div class="contact-form-box shadow-box mb--30">
                          <b class="title">Ready to Stay Safe?—Request a Free Crowd-Minders Consultation! </b>
-                            <form action="https://formspree.io/f/myzgzepo"  method="POST" class="axil-contact-form" id="my-form">
+                            <form action="https://formbold.com/s/ozZmp"  method="POST" class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <label>Name</label>
                                     <input type="text" class="form-control" name="contact-name" required="">
