--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -2670,39 +2670,8 @@
         <!--=====================================-->
         <!--=     Call To Action Area Start     =-->
         <!--=====================================-->
-        <section class="section call-to-action-area">
-            <div class="container">
-                <div class="call-to-action">
-                    <div class="section-heading heading-light">
-                        <span class="subtitle">Let's Work Together</span>
-                        <h2 class="title">Need a successful project?</h2>
-                        <a class='axil-btn btn-large btn-fill-white' href='contact.html'>Estimate Project</a>
-                    </div>
-                    <div class="thumbnail">
-                        <div class="larg-thumb" data-sal="zoom-in" data-sal-duration="600" data-sal-delay="100">
-                            <!-- <img class="paralax-image" src="others/process-4.png" alt="Chat"> -->
-                        </div>
-                        <ul class="list-unstyled small-thumb">
-                            <li class="shape shape-1" data-sal="slide-right" data-sal-duration="800" data-sal-delay="400">
-                                <!-- <img class="paralax-image" src="others/laptop-poses.png" alt="Laptop"> -->
-                            </li>
-                            <li class="shape shape-2" data-sal="slide-left" data-sal-duration="800" data-sal-delay="300">
-                                <!-- <img class="paralax-image" src="others/bill-pay.png" alt="Bill"> -->
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <ul class="list-unstyled shape-group-9">
-                <li class="shape shape-1"><img src="others/bubble-12.png" alt="Comments"></li>
-                <li class="shape shape-2"><img src="others/bubble-16.png" alt="Comments"></li>
-                <li class="shape shape-3"><img src="others/bubble-13.png" alt="Comments"></li>
-                <li class="shape shape-4"><img src="others/bubble-14.png" alt="Comments"></li>
-                <li class="shape shape-5"><img src="others/bubble-16.png" alt="Comments"></li>
-                <li class="shape shape-6"><img src="others/bubble-15.png" alt="Comments"></li>
-                <li class="shape shape-7"><img src="others/bubble-16.png" alt="Comments"></li>
-            </ul>
-        </section>
+<!-- nothing here by now  -->
+    
 
                       <!-- Warning message HTML -->
                       <div class="copy-warning" id="copy-warning">
