making good form

--- a/contact.html
+++ b/contact.html
@@ -193,32 +193,27 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-6">
                         <div class="contact-form-box shadow-box mb--30">
-                         <b class="title">Ready to Stay Safe?—Request a Free Crowd-Minders Consultation! </b>
-                            <form action="https://formbold.com/s/ozZmp"  method="POST" class="axil-contact-form" id="my-form">
+                            <b class="title">Ready to Stay Safe?—Request a Free Crowd-Minders Consultation!</b>
+                            <form action="https://formbold.com/s/ozZmp" method="POST" class="axil-contact-form" id="my-form">
                                 <div class="form-group">
-                                    <label>Name</label>
-                                    <input type="text" class="form-control" name="contact-name" required="">
+                                    <input type="text" class="form-control" name="contact-name" placeholder="Your Name" required>
                                 </div>
                                 <div class="form-group">
-                                    <label>Email</label>
-                                    <input type="email" class="form-control" name="contact-email" required="">
+                                    <input type="email" class="form-control" name="contact-email" placeholder="Your Email" required>
                                 </div>
                                 <div class="form-group">
-                                    <label>Phone</label>
-                                    <input type="tel" class="form-control" name="contact-company" required="">
+                                    <input type="tel" class="form-control" name="contact-phone" placeholder="Your Phone" required>
                                 </div>
                                 <div class="form-group">
-                                    <label>Company</label>
-                                    <input type="text" class="form-control" name="contact-company" required="">
+                                    <input type="text" class="form-control" name="contact-company" placeholder="Your Company" required>
                                 </div>
                                 <div class="form-group mb--40">
-                                    <label>How can we help you?</label>
-                                    <textarea name="contact-message" id="contact-message" class="form-control textarea" cols="30" rows="4" placeholder="Eg:Event Details: (Date, Location, Number of Guests)" required=""></textarea>
+                                    <textarea name="contact-message" id="contact-message" class="form-control textarea" placeholder="How can we help you? (e.g., event details: date, location, guests)" rows="4" required></textarea>
                                 </div>
                                 <div class="form-group">
                                     <input type="submit" value="Get Pricing Now" class="axil-btn btn-fill-primary btn-fluid btn-primary" name="submit-btn">
                                 </div>
-                                 <div id="status"></div>
+                                <div id="status"></div>
                             </form>
                         </div>
                     </div>
@@ -226,15 +221,15 @@
                         <div class="contact-info mb--100 mb_md--30 mt_md--0 mt--150">
                             <h4 class="title">Phone</h4>
                             <p>We’re here for you! Call us Monday - Friday,<br> 9:00 AM to 10:00 PM</p>
-                            <h4 class="phone-number" style="font-size: 25px;"><a href="tel:+250788520272">(+250) 788 520 272</a></h4> <br>
+                            <h4 class="phone-number" style="font-size: 25px;"><a href="tel:+250788520272">(+250) 788 520 272</a></h4>
+                            <br>
                             <h4 class="phone-number" style="font-size: 25px;"><a href="tel:+250790912194">(+250) 790 912 194</a></h4>
                         </div>
                         <div class="contact-info mb--30">
                             <h4 class="title">Email</h4>
                             <p>Reach out to us anytime! Our support team responds within 24 hours during business hours:</p>
-                            <h4 class="phone-number" style="font-size : 28px;"><a href="mailto:crowdminders@gmail.com">info@CrowdMinders.rw</a></h4>
-                        </div> 
-                        <div>  </div>
+                            <h4 class="phone-number" style="font-size: 28px;"><a href="mailto:info@CrowdMinders.rw">info@CrowdMinders.rw</a></h4>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -244,6 +239,7 @@
                 <li class="shape shape-3"><img src="others/circle-3.png" alt="Circle"></li>
             </ul>
         </section>
+        
 
                                <!-- Warning message HTML -->
                                <div class="copy-warning" id="copy-warning">
