--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@ and Social Media services in Kigali, Rwanda. ">
                                 <h6 class="widget-title">Our Partners</h6>
                                 <div class="partner-logos d-flex justify-content-center flex-wrap">
                                     <img src="brand/bkarena.png" alt="Partner 1" class="partner-logo mx-2">
-                                    <img src="brand/BAL_Logo.png" alt="Partner 2" class="partner-logo mx-2">
+                                    <img src="brand/ferwaba.png" alt="Partner 2" class="partner-logo mx-2">
                                 </div>
                             </div>
                         </div>
@@ -1078,7 +1078,7 @@ and Social Media services in Kigali, Rwanda. ">
                         <!-- Newsletter Section -->
                         <div class="col-lg-12 mt-4">
                             <div class="footer-widget text-center">
-                                <h2 class="title">Subscribe to Our Newsletter</h2>
+                                <h3 class="title">Subscribe to Our Newsletter</h3>
                                 <p>Sign up to our newsletter for updates and hot deals</p>
                                 <form action="https://formspree.io/f/myzgzepo" method="POST">
                                     <div class="input-group justify-content-center">
@@ -1112,7 +1112,7 @@ and Social Media services in Kigali, Rwanda. ">
                                         <h6 class="widget-title">Resources</h6>
                                         <ul class="footer-menu list-unstyled">
                                             <li><a href="portfolio-2.html">Showcase</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="contact.html">Get in touch</a></li>
                                         </ul>
                                     </div>
                                 </div>
